# xlab_NFC_

./: README.md
L-ink_Card/: .mxproject  L-ink_Card.ioc
L-ink_Card/.history/: CMakeLists_20241117160040.txt
L-ink_Card/Core/Inc/: RTE_Components.h  custom_bus.h  nfc04a1_conf.h
L-ink_Card/Core/Src/: custom_bus.c  gpio.c  main.c  usart.c
L-ink_Card/cmake/: gcc-arm-none-eabi.cmake
L-ink_Card/cmake/stm32cubemx/: CMakeLists.txt
